[gd_scene load_steps=15 format=4 uid="uid://d3u3f26n1doh6"]

[ext_resource type="Script" uid="uid://dk1x51omf5uux" path="res://levels/scripts/level_03_logic.gd" id="1_0g5yh"]
[ext_resource type="Script" uid="uid://qtlc03dgcseo" path="res://levels/scripts/level.gd" id="1_pwgtw"]
[ext_resource type="PackedScene" uid="uid://diwmvkgtca114" path="res://tile_maps/grass-01.tscn" id="2_crhyv"]
[ext_resource type="PackedScene" uid="uid://b3oaeqoffq7dl" path="res://levels/player_spawn.tscn" id="3_0g5yh"]
[ext_resource type="PackedScene" uid="uid://cssawlcgy87g8" path="res://gui/player_hud/player_hud.tscn" id="4_ww55q"]
[ext_resource type="Script" uid="uid://dp7xt1c8ct3s4" path="res://levels/tutorial_items/tutorial_dialog.gd" id="5_tdgo7"]
[ext_resource type="PackedScene" uid="uid://ctqin6e0wq3vi" path="res://touch_controls/Scene/touch_controls.tscn" id="6_5cxg7"]
[ext_resource type="PackedScene" uid="uid://cgf1781jg33w2" path="res://touch_controls/Scene/pause_button.tscn" id="7_fqhwe"]
[ext_resource type="PackedScene" uid="uid://cyyhm21q0wqey" path="res://levels/level_transition.tscn" id="8_tx87e"]
[ext_resource type="PackedScene" uid="uid://cxwqvwsctjoim" path="res://props/Plants/plant.tscn" id="9_xcewc"]
[ext_resource type="PackedScene" uid="uid://brq0jk6yaiu12" path="res://enemies/goblin/goblin.tscn" id="10_id3ee"]
[ext_resource type="PackedScene" uid="uid://gqs1hvcj20dw" path="res://interactables/treasure_chest/treasure_chest.tscn" id="11_0g5yh"]
[ext_resource type="Resource" uid="uid://biwqu7hopgnkh" path="res://items/stone.tres" id="12_ww55q"]
[ext_resource type="PackedScene" uid="uid://b5qrnxplw1xog" path="res://enemies/slime/slime.tscn" id="14_tdgo7"]

[node name="03" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_pwgtw")

[node name="Level03ScriptRunner" type="Node" parent="."]
script = ExtResource("1_0g5yh")

[node name="PlantsContainer" type="Node2D" parent="."]

[node name="Plant" parent="PlantsContainer" instance=ExtResource("9_xcewc")]
position = Vector2(401, 292)

[node name="Plant3" parent="PlantsContainer" instance=ExtResource("9_xcewc")]
position = Vector2(398, 395)

[node name="Plant4" parent="PlantsContainer" instance=ExtResource("9_xcewc")]
position = Vector2(432, 395)

[node name="Plant2" parent="PlantsContainer" instance=ExtResource("9_xcewc")]
position = Vector2(435, 292)

[node name="GoblinsContainer" type="Node2D" parent="."]

[node name="Goblin" parent="GoblinsContainer" instance=ExtResource("10_id3ee")]
position = Vector2(204, 214)

[node name="Grass-01" parent="." instance=ExtResource("2_crhyv")]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAMAAAAAAAEAAAABAAMAAAAAAAIAAAABAAMAAAAAAAMAAAABAAMAAAAAAAQAAAABAAMAAAAAAAUAAAABAAMAAAAAAAYAAAABAAMAAAAAAAcAAAABAAMAAAAAAAgAAAABAAMAAAAAAAkAAAABAAMAAAAAAAoAAAABAAMAAAAAAAsAAAABAAMAAAAAAAwAAAABAAMAAAAAAA0AAAABAAMAAAAAAA4AAAAAAAUAACABAAAAAAAKAAQAAAABAAEAAAAKAAUAADABAAIAAAAKAAUAADABAAMAAAAKAAUAADABAAQAAAAKAAUAADABAAUAAAAKAAUAADABAAYAAAAKAAUAADABAAcAAAAKAAUAADABAAgAAAAKAAUAADABAAkAAAAKAAUAADABAAoAAAAKAAUAADABAAsAAAAKAAUAADABAAwAAAAKAAUAADABAA0AAAABAAYAACABAA4AAAABAAUAACACAAAAAAALAAQAAAACAAEAAAAAAAMAAAACAAIAAAAAAAIAAAACAAMAAAAAAAMAAAACAAQAAAAAAAIAAAACAAUAAAAAAAMAAAACAAYAAAAAAAIAAAACAAcAAAAAAAMAAAACAAgAAAAAAAIAAAACAAkAAAAAAAMAAAACAAoAAAAEAAMAAAACAAsAAAAAAAMAAAACAAwAAAACAAIAAAACAA0AAAACAAUAAAACAA4AAAACAAYAAAADAAAAAAAMAAQAAAADAAEAAAABAAMAAAADAAIAAAACAAEAAAADAAMAAAABAAMAAAADAAQAAAABAAIAAAADAAUAAAABAAMAAAADAAYAAAABAAIAAAADAAcAAAAFAAAAAAADAAgAAAAFAAEAAAADAAkAAAAOAAEAAAADAAoAAAABAAIAAAADAAsAAAABAAMAAAADAAwAAAAEAAMAAAADAA0AAAADAAUAAAADAA4AAAADAAYAAAAEAAAAAAANAAQAAAAEAAEAAAAKAAQAAAAEAAIAAAAKAAUAAAAEAAMAAAAKAAYAAAAEAAQAAAAKAAcAAAAEAAUAAAACAAIAAAAEAAYAAAACAAIAAAAEAAcAAAAGAAAAAAAEAAgAAAAGAAEAAAAEAAkAAAAGAAIAAAAEAAoAAAAFAAMAAAAEAAsAAAAAAAIAAAAEAAwAAAACAAIAAAAEAA0AAAAEAAUAAAAEAA4AAAAEAAYAAAAFAAAAAAALAAQAAAAFAAEAAAALAAQAAAAFAAIAAAALAAUAAAAFAAMAAAALAAYAAAAFAAQAAAALAAcAAAAFAAUAAAACAAIAAAAFAAYAAAABAAIAAAAFAAcAAAAHAAAAAAAFAAgAAAAOAAEAAAAFAAkAAAAHAAIAAAAFAAoAAAAGAAMAAAAFAAsAAAABAAIAAAAFAAwAAAACAAIAAAAFAA0AAAACAAUAAAAFAA4AAAACAAYAAAAGAAAAAAAMAAQAAAAGAAEAAAAMAAQAAAAGAAIAAAAMAAUAAAAGAAMAAAAMAAYAAAAGAAQAAAAMAAcAAAAGAAUAAAACAAIAAAAGAAYAAAACAAMAAAAGAAcAAAACAAMAAAAGAAgAAAAOAAEAAAAGAAkAAAACAAEAAFAGAAoAAAAHAAMAAAAGAAsAAAAAAAIAAAAGAAwAAAACAAIAAAAGAA0AAAADAAUAAAAGAA4AAAADAAYAAAAHAAAAAAANAAQAAAAHAAEAAAANAAQAAAAHAAIAAAANAAUAAAAHAAMAAAANAAYAAAAHAAQAAAANAAcAAAAHAAUAAAACAAIAAAAHAAYAAAACAAMAAAAHAAcAAAACAAMAAAAHAAgAAAACAAIAAAAHAAkAAAACAAIAAAAHAAoAAAAFAAMAAAAHAAsAAAACAAIAAAAHAAwAAAAEAAMAAAAHAA0AAAAEAAUAAAAHAA4AAAAEAAYAAAAIAAAAAAALAAQAAAAIAAEAAAAOAAQAAAAIAAIAAAAOAAUAAAAIAAMAAAAOAAYAAAAIAAQAAAAOAAcAAAAIAAUAAAACAAIAAAAIAAYAAAAAAAIAAAAIAAcAAAAAAAMAAAAIAAgAAAAHAAcAAAAIAAkAAAAHAAcAAAAIAAoAAAAGAAMAAAAIAAsAAAACAAIAAAAIAAwAAAACAAIAAAAIAA0AAAACAAUAAAAIAA4AAAACAAYAAAAJAAAAAAAMAAQAAAAJAAEAAAABAAMAAAAJAAIAAAACAAIAAAAJAAMAAAABAAMAAAAJAAQAAAACAAIAAAAJAAUAAAACAAIAAAAJAAYAAAACAAIAAAAJAAcAAAABAAMAAAAJAAgAAAAHAAcAAAAJAAkAAAAHAAcAAAAJAAoAAAAHAAMAAAAJAAsAAAACAAIAAAAJAA0AAAADAAUAAAAJAA4AAAADAAYAAAAKAAAAAAANAAQAAAAKAAEAAAAAAAMAAAAKAAIAAAACAAEAAAAKAAMAAAAAAAMAAAAKAAQAAAACAAIAAAAKAAUAAAACAAMAAAAKAAYAAAACAAMAAAAKAAcAAAACAAMAAAAKAAgAAAAHAAcAAAAKAA0AAAAEAAUAAAAKAA4AAAAEAAYAAAALAAAAAAALAAQAAAALAAEAAAACAAMAAAALAAIAAAAIAAEAAAALAAMAAAAIAAIAAAALAAQAAAACAAMAAAALAAUAAAACAAMAAAALAAYAAAAIAAEAAAALAAcAAAAIAAIAAAALAAgAAAACAAMAAAALAAoAAAADAAUAAGALAAsAAAADAAUAAGALAAwAAAADAAUAAGALAA0AAAADAAUAAGALAA4AAAAKAAcAAGAMAAAAAAAMAAQAAAAMAAEAAAACAAMAAAAMAAIAAAAJAAEAAAAMAAMAAAACAAMAAAAMAAQAAAAJAAMAAAAMAAUAAAAJAAAAAAAMAAYAAAAJAAEAAAAMAAcAAAAJAAIAAAAMAAgAAAAJAAMAAAAMAAkAAAAHAAcAAAAMAAoAAAAAAAIAAAAMAAsAAAAKAAMAAAAMAAwAAAACAAIAAAAMAA0AAAACAAEAAAAMAA4AAAACAAIAAAANAAAAAAANAAQAAAANAAEAAAACAAMAAAANAAIAAAAKAAEAAAANAAMAAAAKAAIAAAANAAQAAAAKAAMAAAANAAUAAAAKAAAAAAANAAYAAAAKAAEAAAANAAcAAAACAAMAAAANAAgAAAAKAAMAAAANAAkAAAABAAMAAAANAAoAAAAKAAMAAAANAAsAAAABAAIAAAANAAwAAAACAAIAAAANAA0AAAACAAIAAAANAA4AAAABAAEAAGAOAAAAAAALAAQAAAAOAAEAAAACAAMAAAAOAAIAAAACAAMAAAAOAAMAAAALAAIAAAAOAAQAAAALAAMAAAAOAAUAAAACAAMAAAAOAAYAAAACAAMAAAAOAAcAAAALAAIAAAAOAAgAAAALAAMAAAAOAAkAAAADAAUAAGAOAAoAAAADAAUAAGAOAAsAAAADAAUAAGAOAAwAAAADAAUAAGAOAA0AAAADAAUAAGAOAA4AAAAKAAcAAAAPAAAAAAALAAQAAAAPAAEAAAABAAMAAAAPAAIAAAABAAIAAAAPAAMAAAABAAMAAAAPAAQAAAABAAIAAAAPAAUAAAAOAAEAAAAPAAYAAAABAAIAAAAPAAcAAAABAAMAAAAPAAgAAAABAAIAAAAPAAkAAAABAAMAAAAPAAoAAAABAAIAAAAPAAsAAAABAAIAAAAPAAwAAAACAAIAAAAPAA0AAAACAAUAAAAPAA4AAAACAAYAAAAQAAAAAAAMAAQAAAAQAAEAAAACAAMAAAAQAAIAAAAAAAIAAAAQAAMAAAAAAAMAAAAQAAQAAAAAAAIAAAAQAAUAAAAAAAMAAAAQAAYAAAAAAAIAAAAQAAcAAAAAAAMAAAAQAAgAAAABAAEAAGAQAAkAAAAAAAMAAAAQAAoAAAAAAAIAAAAQAAsAAAAAAAMAAAAQAAwAAAACAAIAAAAQAA0AAAADAAUAAAAQAA4AAAADAAYAAAARAAAAAAANAAQAAAARAAEAAAACAAMAAAARAAIAAAABAAIAAAARAAMAAAABAAMAAAARAAQAAAABAAIAAAARAAUAAAABAAMAAAARAAYAAAABAAIAAAARAAcAAAABAAMAAAARAAgAAAABAAIAAAARAAkAAAABAAMAAAARAAoAAAABAAIAAAARAAsAAAABAAMAAAARAAwAAAACAAIAAAARAA0AAAAEAAUAAAARAA4AAAAEAAYAAAASAAAAAAABAAcAADASAAEAAAABAAcAADASAAIAAAABAAcAADASAAMAAAABAAcAADASAAQAAAABAAcAADASAAUAAAABAAcAADASAAYAAAABAAcAADASAAcAAAABAAcAADASAAgAAAABAAcAADASAAkAAAABAAcAADASAAoAAAABAAcAADASAAsAAAABAAcAADASAAwAAAABAAcAADASAA0AAAABAAYAADASAA4AAAABAAUAADATAAAAAAAAAAcAADATAAEAAAAAAAcAADATAAIAAAAAAAcAADATAAMAAAAAAAcAADATAAQAAAAAAAcAADATAAUAAAAAAAcAADATAAYAAAAAAAcAADATAAcAAAAAAAcAADATAAgAAAAAAAcAADATAAkAAAAAAAcAADATAAoAAAAAAAcAADATAAsAAAAAAAcAADATAAwAAAAAAAcAADATAA0AAAAAAAYAADATAA4AAAAAAAUAADAJAAwAAAACAAIAAAAKAAwAAAACAAIAAAAKAAsAAAACAAIAAAAKAAoAAAAHAAcAAAAKAAkAAAAHAAcAAAALAAkAAAADAAUAAGA=")

[node name="PlayerSpawn" parent="." instance=ExtResource("3_0g5yh")]
position = Vector2(423, 360)

[node name="PlayerHud" parent="." instance=ExtResource("4_ww55q")]

[node name="TutorialDialog" type="Control" parent="PlayerHud"]
visible = false
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.75
anchor_right = 0.95
anchor_bottom = 0.95
offset_left = -21.0
offset_top = -320.0
offset_right = -21.0
offset_bottom = -320.0
script = ExtResource("5_tdgo7")
metadata/_edit_use_anchors_ = true

[node name="DialogBackground" type="Panel" parent="PlayerHud/TutorialDialog"]
modulate = Color(0, 0, 0, 0.6)
custom_minimum_size = Vector2(600, 80)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
metadata/_edit_use_anchors_ = true

[node name="DialogLabel" type="Label" parent="PlayerHud/TutorialDialog/DialogBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TouchControls" parent="Control" instance=ExtResource("6_5cxg7")]

[node name="PauseButton" parent="Control" instance=ExtResource("7_fqhwe")]

[node name="03To02" parent="." instance=ExtResource("8_tx87e")]
position = Vector2(416, 480)
level = "uid://d2nhtvddhham6"
target_transition_area = "02To03"
side = 3

[node name="TreasureChest" parent="." instance=ExtResource("11_0g5yh")]
visible = false
position = Vector2(333, 144)
item_data = ExtResource("12_ww55q")
quantity = 10

[node name="Slime" parent="." instance=ExtResource("14_tdgo7")]
position = Vector2(203, 87)
